--- a/jenkins_helper/templates/default/job.xml.erb
+++ b/jenkins_helper/templates/default/job.xml.erb
@@ -58,7 +58,7 @@ require &apos;rubygems&apos;
 require &apos;aws-sdk&apos;
 
 opsworks = AWS::OpsWorks.new().client
-own_instance_id = ENV[&apos;instance_id&apos;]
+own_instance_id = ENV[&apos;OpsWorksInstanceID&apos;]
 
 $VERBOSE = false
 require &apos;rubygems&apos;
