--- a/jenkins_helper/templates/default/job.xml.erb
+++ b/jenkins_helper/templates/default/job.xml.erb
@@ -53,7 +53,7 @@
   <concurrentBuild>false</concurrentBuild>
   <builders>
     <hudson.plugins.ruby.Ruby>
-      <command>exec(&apos;<%= node[:jenkins_helper][:deployer_binay] %>&apos;)</command>
+      <command>exec(&apos;<%= node[:jenkins_helper][:deployer_binary] %>&apos;)</command>
     </hudson.plugins.ruby.Ruby>
   </builders>
   <publishers/>
