--- a/jenkins_helper/templates/default/opsworks_deployer.rb.erb
+++ b/jenkins_helper/templates/default/opsworks_deployer.rb.erb
@@ -5,7 +5,7 @@ require 'rubygems'
 require 'aws-sdk'
 
 opsworks = AWS::OpsWorks.new().client
-own_instance_id = ENV['OpsWorksInstanceID']
+own_instance_id = ARGV[0] || ENV['OpsWorksInstanceID']
 
 $VERBOSE = false
 require 'rubygems'
