--- a/jenkins_helper/templates/default/opsworks_deployer.rb.erb
+++ b/jenkins_helper/templates/default/opsworks_deployer.rb.erb
@@ -5,7 +5,8 @@ require 'rubygems'
 require 'aws-sdk'
 
 opsworks = AWS::OpsWorks.new().client
-own_instance_id = ARGV[0] || ENV['OpsWorksInstanceID']
+own_instance_id = ARGV[0] || ENV['OpsWorksInstanceID'] || <%= node[:opsworks][:instance][:id] %>
+puts "Running on AWS OpsWorks instance #{own_instance_id.inspect}"
 
 $VERBOSE = false
 require 'rubygems'
